--- a/main.html
+++ b/main.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Semantic Navbar and Images</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Assuming you have a separate stylesheet -->
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <h1>3 random images</h1>
+        <div class="image-container">
+            <img src="https://picsum.photos/id/123/200/300" alt="Random image">
+            <img src="https://picsum.photos/id/124/200/300" alt="Random image">
+            <img src="https://picsum.photos/id/125/200/300" alt="Random image">
+        </div>
+    </main>
+
+    <footer>
+        <!-- Your footer content here -->
+    </footer>
+
+    <!-- Optional: Include your JavaScript file -->
+    <script src="./script.js"></script>
 </body>
-
 </html>
